--- a/metamask/start/package.json
+++ b/metamask/start/package.json
@@ -2,6 +2,8 @@
   "name": "metamask-simple-dapp",
   "version": "1.0.0",
   "description": "Building a simple dapp used in MetaMask e2e tests.",
+  "type":"module",
+  "main":"contract.js",
   "scripts": {
     "deploy": "./deploy.sh",
     "lint": "eslint . --ext js,json",
@@ -33,6 +35,5 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-json": "^2.0.1",
     "static-server": "^2.2.1"
-  },
-  "type": "module"
+  }
 }
